refactor(api): ✨ overhaul API to singleton pattern with lifecycle management and Javadocs